--- a/style.css
+++ b/style.css
@@ -5,6 +5,175 @@
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   letter-spacing: 1px;
+  color: var(--main);
+}
+
+html {
+  font-size: 16px;
+}
+
+:root {
+  --main: #000;
+  --secondary: rgb(248, 248, 248);
+  --blue: #73A4FF
+}
+
+body {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  background: rgb(221, 201, 201);
+  height: 100vh;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background: var(--secondary);
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  padding: 1.5rem;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 1.4rem;
+  text-align: center;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: black;
+}
+
+.title {
+  position: relative;
+  display: inline-block;
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-align: center;
+  color: black;
+  text-transform: uppercase;
+  z-index: 2;
+}
+.title::before {
+  content: "";
+  position: absolute;
+  background: var(--blue);
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  height: 8px;
+  z-index: -1;
+}
+
+hr {
+  width: 100%;
+  border: 2px solid black;
+}
+
+.data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.frez {
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.result {
+  font-weight: bold;
+}
+
+input,
+option,
+select {
+  outline: 0;
+  color: black;
+}
+input[type="number"],
+input[type="text"] {
+  width: 80%;
+  font-size: 1.1rem;
+  border: none;
+  padding: 0.3rem 1rem;
+  margin: 0.1rem;
+  border-radius: 0.2rem;
+  background: #73a4ff81;
+  box-shadow: 0 1px 1px black;
+}
+select {
+  text-transform: capitalize;
+  font-size: 1.2rem;
+  border: 2px solid var(--blue);
+}
+option {
+  font-size: 1.2rem;
+  text-transform: capitalize;
+}
+.buttons {
+  display: flex;
+  width: 90%;
+  justify-content: space-evenly;
+}
+.count {
+  padding: 0.3rem 0;
+  flex-basis: 45%;
+  background: 0;
+  border: 2px solid black;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.3rem;
+  outline: 0;
+  border-radius: 0.4rem;
+  color: var(--main);
+}
+
+input[type="number"].emptyInput {
+  /* border: 3px solid red; */
+  background: rgba(255, 0, 0, 0.8);
+  transition: 0.2s;
+}
+@media (min-width: 900px) {
+  .container {
+    max-height: 90vh;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 10px black;
+  }
+  .title {
+    margin: 0.2rem 0;
+    font-size: 1.5rem;
+  }
+  label {
+    font-size: 1.2rem;
+    margin: 0.4rem 0;
+  }
+  input[type="number"],
+  input[type="text"] {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  .count {
+    padding: 0.5rem;
+    cursor: pointer;
+  }
+  .count:hover {
+    background: black; 
+    color: var(--secondary);
+  }
+}
+/* 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
   color: white;
 }
 
@@ -142,4 +311,4 @@ input[type="number"].emptyInput {
   .count:hover {
     background: black;
   }
-}
+} */
